--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
                     <input type="password" placeholder="Password" id="password">
                 </div>  
                 <button type="submit">CLAIM YOUR FREE TRIAL</button>
+                <div class="terms">
+                    <p>By clicking the button, you are agreeing to our<span class="services"> Terms and Services</span></p>
+                </div>
             </form>
         </div>
     </div>
